# Prairie

./: .gitignore  CHANGELOG.md  LICENSE  MANUAL_TEST.md  README.md  eslint.config.js  package.json
.github/workflows/: ci.yml
scripts/: copy-sidecar.mjs  render-icon.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  commands.rs  convert.rs  lib.rs  main.rs  sidecar.rs
src-tauri/tests/: integration_tls.rs
src/api/: errors.test.ts  errors.ts  index.test.ts  index.ts  types.ts
src/components/: CommandPalette.test.tsx  CommandPalette.tsx  JsonTree.test.tsx  JsonTree.tsx  Modal.tsx  Toast.tsx  UsersModal.tsx
src/lib/: motion.ts
src/screens/: Connection.tsx  DocumentBrowser.tsx  Login.tsx  Setup.tsx  Workspace.tsx
src/stores/: connection.test.ts  connection.ts  filters.test.ts  filters.ts  recents.ts
